Bug 478397 - Recent files don't show up
Summary: Recent files don't show up
Status: RESOLVED FIXED
Alias: None
Product: kactivitymanagerd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: HI major
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords: qt6, regression
: 479016 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-11 12:35 UTC by Jin Liu
Modified: 2024-01-14 09:37 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6 RC1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-12-11 12:35:39 UTC
STEPS TO REPRODUCE
1. Clear history in systemsettings.
2. Open a text file.
3. Kickoff - History

OBSERVED RESULT
No recent files.

EXPECTED RESULT
Text file in recent files.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.4-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Jin Liu 2023-12-11 12:36:53 UTC
Running sqlitebrowser ~/.local/share/kactivitymanagerd/resources/database shows that ResourceEvent.targettedResource doesn't contain file paths anymore, so the two tables can no longer be joined.

dbus-monitor shows that current infomation was sent to kactivitymanagerd:
method call time=1702290706.544480 sender=:1.4430 -> destination=org.kde.ActivityManager serial=73 path=/ActivityManager/Resources; interface=org.kde.ActivityManager.Resources; member=RegisterResourceEvent
string "org.kde.kwrite"
uint32 0
string "/home/jin/kde/src/attica/AUTHORS"
uint32 0
method call time=1702290706.544518 sender=:1.4430 -> destination=org.kde.ActivityManager serial=74 path=/ActivityManager/Resources; interface=org.kde.ActivityManager.Resources; member=RegisterResourceMimetype
string "/home/jin/kde/src/attica/AUTHORS"
string "text/x-authors"
method call time=1702290706.544544 sender=:1.4430 -> destination=org.kde.ActivityManager serial=75 path=/ActivityManager/Resources; interface=org.kde.ActivityManager.Resources; member=RegisterResourceTitle
string "/home/jin/kde/src/attica/AUTHORS"
string "AUTHORS"
Comment 2 Nate Graham 2023-12-21 00:37:40 UTC
*** Bug 478665 has been marked as a duplicate of this bug. ***
Comment 3 Jin Liu 2023-12-21 12:39:01 UTC
Note that this bug was originally about not having recent files at all when it's _enabled_. It's not about unable to disable recent files.
Comment 4 Méven Car 2023-12-22 09:38:11 UTC
How did you open the text file ?
With which program ?
Double clicking with dolphin ? From the command line ?
Comment 5 Jin Liu 2023-12-22 09:55:56 UTC
(In reply to Méven Car from comment #4)
> How did you open the text file ?
> With which program ?

KWrite

> Double clicking with dolphin ? From the command line ?

Both double clicking in Dolphin, and from the menu in KWrite.

Either way, it inserts a record in ResourceInfo table, but no corresponding record in ResourceEvent or ResourceScoreCache table.
Comment 6 Jin Liu 2023-12-22 10:20:44 UTC
BTW, seems that clearing history doesn't clear the ResourceInfo table.
Comment 7 Bug Janitor Service 2023-12-22 10:56:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/67
Comment 8 Méven Car 2023-12-22 11:05:58 UTC
(In reply to Jin Liu from comment #6)
> BTW, seems that clearing history doesn't clear the ResourceInfo table.

That's a different bug. Feel free to report it.
I am taking care of it.
Comment 9 Jin Liu 2023-12-22 11:10:55 UTC
(In reply to Méven Car from comment #8)
> (In reply to Jin Liu from comment #6)
> > BTW, seems that clearing history doesn't clear the ResourceInfo table.
> 
> That's a different bug. Feel free to report it.
> I am taking care of it.

https://bugs.kde.org/show_bug.cgi?id=478876
Comment 10 Méven 2023-12-22 11:16:09 UTC
Git commit e42bc4ccccb4c65df58bd6d2a925c2618b16a630 by Méven Car.
Committed on 22/12/2023 at 11:52.
Pushed by meven into branch 'master'.

StatsPlugin: allow local files to be added to ResourceCache

hasMatch has diferrent semantics between QRegeyp and QRegularExpression.
We want the old exactMatch behavior matching on the entirety of the
string.

M  +1    -1    src/common/database/Database.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/e42bc4ccccb4c65df58bd6d2a925c2618b16a630
Comment 11 Bug Janitor Service 2023-12-22 11:42:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/68
Comment 12 Nate Graham 2024-01-12 21:43:16 UTC
*** Bug 479016 has been marked as a duplicate of this bug. ***