StatsPlugin: allow local files to be added to ResourceCache

hasMatch has diferrent semantics between QRegeyp and QRegularExpression.
We want the old exactMatch behavior matching on the entirety of the
string.

BUG: 478397