src/common/database/Database.h
@@ -132,7 +132,7 @@ inline QString starPatternToLike(const QString &pattern)
 
 inline QRegularExpression starPatternToRegex(const QString &pattern)
 {
-    return QRegularExpression(parseStarPattern(pattern, QStringLiteral(".*"), [](QString pattern) { return QRegularExpression::escape(pattern); }));
+    return QRegularExpression(parseStarPattern(pattern, QStringLiteral(".*"), [](QString pattern) { return QRegularExpression::escape(QRegularExpression::anchoredPattern(pattern)); }));
 }
 
 } // namespace Common
